# Anveshak

./: CMakeLists.txt  CreateProcessingBlocks.cpp  FinalOutput.cpp  GiveLabelPBofROI.cpp  GroundTruth.pro.user.cbbfc14  GroundTruth.pro.user.d6439c6  Image_proc_functions.cpp  LabelPB.cpp  LabelingOfPb.cpp  LabellingROI.cpp  Morphology.cpp  PixelValidation.cpp  README.md  Readme.txt  RectangleTest.cpp  SelectROI.cpp  SmoothingGapfilling.cpp  binarization.cpp  binary.cpp  binary.h  binary.ui  chagelabelofpbs.cpp  chagelabelofpbs.h  chagelabelofpbs.ui  connectedcomponent.cpp  continue.cpp  continue.h  continue.ui  continuelabeling.cpp  continuelabeling.h  continuelabeling.ui  customizelabels.cpp  customizelabels.h  customizelabels.ui  folder.cpp  groundtruth.cpp  groundtruth.h  groundtruth.ui  labelinfo.cpp  labelinfo.h  (+58 more)
